--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
 			"name": "(gdb) Launch",
 			"type": "cppdbg",
 			"request": "launch",
-			"program": "${workspaceFolder}/labB/bubblesort",
-			"args": ["3", "4", "2", "1"],
+			"program": "${workspaceFolder}/labB/virusDetector",
+			"args": ["infected"],
 			"stopAtEntry": false,
 			"cwd": "${fileDirname}",
 			"environment": [],
