--- a/labB/makefile
+++ b/labB/makefile
@@ -1,16 +1,16 @@
-all: bubblesort hexaPrint virusDetector
+# all: bubblesort hexaPrint virusDetector
 
-bubblesort: bubblesort.o
-	gcc -g -m32 -Wall -o bubblesort bubblesort.o
+# bubblesort: bubblesort.o
+	# gcc -g -m32 -Wall -o bubblesort bubblesort.o
 
-bubblesort.o: bubblesort.c
-	gcc -g -m32 -Wall -c -o bubblesort.o bubblesort.c
+# bubblesort.o: bubblesort.c
+	# gcc -g -m32 -Wall -c -o bubblesort.o bubblesort.c
 
-hexaPrint: hexaPrint.o
-	gcc -g -m32 -Wall -o hexaPrint hexaPrint.o
+# hexaPrint: hexaPrint.o
+	# gcc -g -m32 -Wall -o hexaPrint hexaPrint.o
 
-hexaPrint.o: hexaPrint.c
-	gcc -g -m32 -Wall -c -o hexaPrint.o hexaPrint.c
+# hexaPrint.o: hexaPrint.c
+	# gcc -g -m32 -Wall -c -o hexaPrint.o hexaPrint.c
 
 virusDetector: virusDetector.o
 	gcc -g -m32 -Wall -o virusDetector virusDetector.o
@@ -19,4 +19,5 @@ virusDetector.o: virusDetector.c
 	gcc -g -m32 -Wall -c -o virusDetector.o virusDetector.c
 
 clean:
-	rm -f *.o bubblesort hexaPrint virusDetector
+	# rm -f *.o bubblesort hexaPrint virusDetector
+	rm -f *.o virusDetector
