changed virusDetector to AntiVirus

--- a/labB/makefile
+++ b/labB/makefile
@@ -1,4 +1,4 @@
-# all: bubblesort hexaPrint virusDetector
+# all: bubblesort hexaPrint AntiVirus
 
 # bubblesort: bubblesort.o
 	# gcc -g -m32 -Wall -o bubblesort bubblesort.o
@@ -12,12 +12,12 @@
 # hexaPrint.o: hexaPrint.c
 	# gcc -g -m32 -Wall -c -o hexaPrint.o hexaPrint.c
 
-virusDetector: virusDetector.o
-	gcc -g -m32 -Wall -o virusDetector virusDetector.o
+AntiVirus: AntiVirus.o
+	gcc -g -m32 -Wall -o AntiVirus AntiVirus.o
 
-virusDetector.o: virusDetector.c
-	gcc -g -m32 -Wall -c -o virusDetector.o virusDetector.c
+AntiVirus.o: AntiVirus.c
+	gcc -g -m32 -Wall -c -o AntiVirus.o AntiVirus.c
 
 clean:
-	# rm -f *.o bubblesort hexaPrint virusDetector
-	rm -f *.o virusDetector
+	# rm -f *.o bubblesort hexaPrint AntiVirus
+	rm -f *.o AntiVirus
