--- a/lab3/task2/makefile
+++ b/lab3/task2/makefile
@@ -1,4 +1,4 @@
-all: main
+all: main hello_world
 
 start.o: start.s
 	nasm -f elf32 start.s -o start.o
@@ -12,5 +12,11 @@ main.o: main.c
 main: start.o main.o util.o
 	ld -m elf_i386 start.o main.o util.o -o main
 
+hello_world: hello_world.o
+	ld -m elf_i386 hello_world.o -o hello_world
+
+hello_world.o:
+	nasm -f elf32 hello_world.s -o hello_world.o
+
 clean:
-	rm -f *.o main
+	rm -f *.o main hello_world
