--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
   "files.associations": {
     "stdio.h": "c",
     "stdlib.h": "c",
-    "util.h": "c"
+    "util.h": "c",
+    "file.h": "c"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
