--- a/labC/makefile
+++ b/labC/makefile
@@ -1,3 +1,14 @@
+all: myshell mypipeline
+
+myshell: myshell.o LineParser.o
+	gcc -g -Wall -o myshell myshell.o LineParser.o
+
+myshell.o: myshell.c
+	gcc -g -Wall -c -o myshell.o myshell.c
+
+LineParser.o: LineParser.c LineParser.h
+	gcc -g -Wall -c -o LineParser.o LineParser.c
+
 mypipeline: mypipeline.o
 	gcc -g -Wall -o mypipeline mypipeline.o
 
@@ -5,4 +16,4 @@ mypipeline.o: mypipeline.c
 	gcc -g -Wall -c -o mypipeline.o mypipeline.c
 
 clean:
-	rm -f *.o mypipeline
+	rm -f *.o myshell mypipeline
