--- a/labC/makefile
+++ b/labC/makefile
@@ -1,19 +1,19 @@
 all: myshell mypipeline
 
 myshell: myshell.o LineParser.o
-	gcc -g -Wall -o myshell myshell.o LineParser.o
+	gcc -g -m32 -Wall -o myshell myshell.o LineParser.o
 
 myshell.o: myshell.c
-	gcc -g -Wall -c -o myshell.o myshell.c
+	gcc -g -m32 -Wall -c -o myshell.o myshell.c
 
 LineParser.o: LineParser.c LineParser.h
-	gcc -g -Wall -c -o LineParser.o LineParser.c
+	gcc -g -m32 -Wall -c -o LineParser.o LineParser.c
 
 mypipeline: mypipeline.o
-	gcc -g -Wall -o mypipeline mypipeline.o
+	gcc -g -m32 -Wall -o mypipeline mypipeline.o
 
 mypipeline.o: mypipeline.c
-	gcc -g -Wall -c -o mypipeline.o mypipeline.c
+	gcc -g -m32 -Wall -c -o mypipeline.o mypipeline.c
 
 clean:
 	rm -f *.o myshell mypipeline
